// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`filterChildren when required values are given returns all children containing the letter a when filter value is a 1`] = `
Array [
  <div
    text="aaa"
  />,
  <div
    text="cca"
  />,
]
`;

exports[`filterChildren when required values are given returns all children containing the letters xyz when filter value is xyz 1`] = `
Array [
  <div
    text="xyz"
  />,
  <div
    text="abcxyzqwe"
  />,
]
`;

exports[`filterChildren when required values are given returns children through a callback if one is passed and there is a filter value 1`] = `
Array [
  <div
    className="wrapper"
  >
    <div
      text="aaa"
    />
  </div>,
]
`;

exports[`filterChildren when required values are given returns the correct number of children for a custom filter that checks value length is 4 1`] = `
Array [
  <div
    text="aaaa"
  />,
  <div
    text="aaaa"
  />,
]
`;

exports[`filterChildren when required values are not given returns children through a callback if one is passed 1`] = `
Array [
  <div
    className="wrapper"
  >
    <div
      text="aaa"
    />
  </div>,
]
`;
